--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+blinker==1.4
 click==7.1.2
 Flask==1.1.2
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.4.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
