--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
 blinker==1.4
+captcha==0.3
 click==7.1.2
 Flask==1.1.2
 Flask-Login==0.5.0
 Flask-Mail==0.9.0
+flask-session-captcha==1.2.0
+Flask-Sessionstore==0.4.5
 Flask-SQLAlchemy==2.4.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+numpy==1.19.4
+pandas==1.1.5
+Pillow==8.0.1
+python-dateutil==2.8.1
+pytz==2020.4
+six==1.15.0
 SQLAlchemy==1.3.22
 Werkzeug==1.0.1
